--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id 'kotlin-kapt'
 }
 
+// local.properties에서 선언한 값들을 불러온다
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     namespace 'com.example.mobilesoftware'
     compileSdk 34
@@ -16,8 +21,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
 
+        buildConfigField "String", "GOOGLE_MAP_API_KEY", properties['google_map_api_key']
+        //manifestPlaceholders = [GOOGLE_MAP_API_KEY: google_map_api_key]
+    }
+    buildFeatures {
+        buildConfig true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -53,4 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.8'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.1.1'
+    //구글맵
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
