tab 추가. fragment로 수정

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,6 @@ dependencyResolutionManagement {
 
 rootProject.name = "MobileSoftware"
 include ':app'
+include ':calendartest'
+include ':test'
+include ':tabtest'
