--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.8'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.1.1'
+    implementation 'com.google.android.material:material:1.4.0.'
 }
