--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,19 @@ plugins {
     id 'kotlin-kapt'
 }
 
-// local.properties에서 선언한 값들을 불러온다
-
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
 android {
     namespace 'com.example.mobilesoftware'
     compileSdk 34
+
+    // local.properties 파일에서 값 읽기
+    def localPropertiesFile = rootProject.file("local.properties")
+    def localProperties = new Properties()
+
+    if (localPropertiesFile.exists()) {
+        localPropertiesFile.withInputStream { stream ->
+            localProperties.load(stream)
+        }
+    }
 
     defaultConfig{
         namespace 'com.example.mobilesoftware'
@@ -22,7 +27,10 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "String", "GOOGLE_MAP_API_KEY", properties['google_map_api_key']
+
+        // local.properties에서 읽어온 API 키 사용
+        buildConfigField "String", "GOOGLE_MAP_API_KEY", "\"${localProperties['google_map_api_key']}\""
+        manifestPlaceholders = [GOOGLE_MAP_API_KEY: "\"${localProperties['google_map_api_key']}\""]
     }
     buildFeatures {
         buildConfig true
@@ -63,6 +71,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.8'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.1.1'
     //구글맵
-    implementation 'com.google.android.gms:play-services-maps:18.2.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
