--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
     implementation("com.google.firebase:firebase-analytics")
+    //firestore
     implementation 'com.google.firebase:firebase-firestore-ktx:24.3.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.2'
     testImplementation 'junit:junit:4.13.2'
