--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-bom:30.4.1'
+    implementation 'com.google.firebase:firebase-bom:32.7.0'
+    implementation("com.google.firebase:firebase-database-ktx")
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
@@ -60,6 +61,9 @@ dependencies {
     //firestore
     implementation 'com.google.firebase:firebase-firestore-ktx:24.3.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.firebaseui:firebase-ui-storage:8.0.1'
+    implementation 'com.github.bumptech.glide:compiler:4.13.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
