--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 def google_map_api_key = properties.getProperty('google_map_api_key')
 
 android {
+    useLibrary 'org.apache.http.legacy'
     namespace 'com.example.mobilesoftware'
     compileSdk 34
 
@@ -48,6 +49,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
