--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-bom:32.7.0'
-    implementation("com.google.firebase:firebase-database-ktx")
+    implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.8'
